Win32_DescriptionWindow.ixx

--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -597,7 +597,8 @@
     <ClCompile Include="Win32_AppTitle.ixx" />
     <ClCompile Include="Win32_CrsrWindow.cpp" />
     <ClCompile Include="Win32_CrsrWindow.ixx" />
-    <ClCompile Include="win32_descriptionWindow.cpp" />
+    <ClCompile Include="Win32_DescriptionWindow.cpp" />
+    <ClCompile Include="Win32_DescriptionWindow.ixx" />
     <ClCompile Include="win32_MainWindow.cpp" />
     <ClCompile Include="win32_MiniWindow.cpp" />
     <ClCompile Include="win32_monitorWindow.cpp" />
@@ -626,7 +627,6 @@
     <ClInclude Include="NNetInputOutputUI.h" />
     <ClInclude Include="win32_MainWindow.h" />
     <ClInclude Include="win32_MiniWindow.h" />
-    <ClInclude Include="win32_descriptionWindow.h" />
     <ClInclude Include="win32_monitorWindow.h" />
     <ClInclude Include="win32_NNetAppMenu.h" />
     <ClInclude Include="win32_NNetAppWindow.h" />
