--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -164,7 +164,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_actionTimer.h" />
-    <ClInclude Include="win32_animation.h" />
     <ClInclude Include="win32_arrowButton.h" />
     <ClInclude Include="win32_baseScale.h" />
     <ClInclude Include="win32_baseDialog.h" />
@@ -199,6 +198,7 @@
     </ClCompile>
     <ClCompile Include="Win32_AboutBox.cpp" />
     <ClCompile Include="Win32_AboutBox.ixx" />
+    <ClCompile Include="Win32_Animation.ixx" />
     <ClCompile Include="win32_baseScale.cpp" />
     <ClCompile Include="Win32_Command.cpp" />
     <ClCompile Include="win32_baseDialog.cpp" />
