--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -96,9 +96,6 @@
     <ClInclude Include="RotationCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SizeSensorCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MoveSignalCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -216,6 +213,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="NewIoLinePairCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SizeSensorCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
