--- a/Toolbox/Wrappers/Wrappers.vcxproj.filters
+++ b/Toolbox/Wrappers/Wrappers.vcxproj.filters
@@ -15,12 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="UtilityWrappers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="UtilityWrappers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UtilityWrappers.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
