--- a/Toolbox/runtimeCPP/runtimeCPP.vcxproj
+++ b/Toolbox/runtimeCPP/runtimeCPP.vcxproj
@@ -171,7 +171,6 @@
     <ClInclude Include="Scanner.h" />
     <ClInclude Include="Script.h" />
     <ClInclude Include="ScriptStack.h" />
-    <ClInclude Include="Symtab.h" />
     <ClInclude Include="WrapBase.h" />
   </ItemGroup>
   <ItemGroup>
@@ -181,6 +180,7 @@
     <ClCompile Include="Script.cpp" />
     <ClCompile Include="Scanner.cpp" />
     <ClCompile Include="Symtab.cpp" />
+    <ClCompile Include="Symtab.ixx" />
     <ClCompile Include="WrapInclude.cpp" />
   </ItemGroup>
   <ItemGroup>
