--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -162,7 +162,6 @@
   <ItemGroup>
     <ClInclude Include="D2D_DrawContext.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="win32_arrowButton.h" />
     <ClInclude Include="win32_baseScale.h" />
     <ClInclude Include="win32_baseDialog.h" />
     <ClInclude Include="win32_baseRefreshRate.h" />
@@ -189,6 +188,7 @@
     <ClCompile Include="Win32_AboutBox.ixx" />
     <ClCompile Include="Win32_ActionTimer.ixx" />
     <ClCompile Include="Win32_Animation.ixx" />
+    <ClCompile Include="Win32_ArrowButton.ixx" />
     <ClCompile Include="win32_baseScale.cpp" />
     <ClCompile Include="Win32_Command.cpp" />
     <ClCompile Include="win32_baseDialog.cpp" />
