--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -84,9 +84,6 @@
     <ClInclude Include="RotationCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MoveSignalCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="NNetCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -213,6 +210,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ToggleEmphModeCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveSignalCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
