--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="D2D_DrawContext.h" />
+    <ClInclude Include="Win32_PIXEL.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_baseScale.h" />
     <ClInclude Include="win32_baseDialog.h" />
@@ -201,6 +202,7 @@
     <ClCompile Include="Win32_event.ixx" />
     <ClCompile Include="win32_graphicsWindow.cpp" />
     <ClCompile Include="win32_messagePump.cpp" />
+    <ClCompile Include="Win32_PIXEL.cpp" />
     <ClCompile Include="Win32_Sound.ixx" />
     <ClCompile Include="Win32_StdDialogBox.cpp" />
     <ClCompile Include="Win32_StdDialogBox.ixx" />
