--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="win32_PixelTypes.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Win32_PIXEL.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_baseWindow.cpp">
@@ -186,6 +189,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Win32_Thread.ixx">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Win32_PIXEL.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
